--- a/public/Hello.css
+++ b/public/Hello.css
@@ -1,7 +1,24 @@
 .teststyle {
-  font-size: 200%;
-  margin: 20px;
-  padding: 20px;
-  background-color: #00ffff;
+  font-size: 100%;
+  margin: 10px;
+  padding: 10px;
+  background-color: #5555ff;
+  color: #ffffff;
 }
 
+.SuperScrollPanelInner {
+  position: absolute;
+  xxxoverflow-y: auto;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  bottom: 0px;
+  padding: 0px;
+  margin: 0px;
+}
+
+.SuperScrollPanelOuter {
+ position: relative;
+  padding: 0px;
+  margin: 0px;
+}
